# SATySFi-debug-show-value

./: .gitignore  Satyristes  debug-show-value.satyg  readme.md  satysfi-debug-show-value-doc.opam  satysfi-debug-show-value.opam  test.saty
doc/: doc-ja.md  doc-ja.saty
