opam-version: "2.0"
name: "satysfi-debug-show-value-doc"
version: "0.1.2"
synopsis: "Document: Stringify SATySFi's value"
description: """Document: Stringify SATySFi's value"""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-debug-show-value"
bug-reports: "https://github.com/puripuri2100/SATySFi-debug-show-value/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-debug-show-value.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}

  "satysfi-debug-show-value" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "debug-show-value-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "debug-show-value-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]